# core-system

./: .env  .gitignore  .yamllint  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yml  env.  index.html  ort  pyproject.toml  raspberry-pi  requirements.txt
.github/actions/: CI.yml
.github/workflows/: neural-nexus-ci-cd.yml
config/: edge_node.toml
core/inference_engine/: Cargo.toml  engine.py
edge_modules/src/: config.rs
k8s/: secrets.yaml
monitoring/: filebeat.yml
monitoring/src/: config.rs
orchestrator/.github/workflows/: neural-nexus-ci-cd.yml
orchestrator/k8s/: namespace.yaml  orchestrator.yaml
scripts/: cleanup.sh  deploy-edge.sh  emergency-rollback.sh  health-check.sh  integration-tests.sh  neural_nexus-Setup  security-hardening.sh  update-deployment.sh
tests/: Troubleshooting  load_test.py
