[package]
name = "neural-nexus-core"
version = "0.1.0"
edition = "2021"
authors = ["Neural Nexus Team <team@neuralnexus.dev>"]
description = "Plataforma de IA Distribuida para Edge Computing con Inferencia Neuromorfica"
license = "Apache-2.0"
repository = "https://github.com/mechmind-dwv/core-system"
keywords = ["edge-computing", "ai", "neuromorphic", "distributed", "inference"]
categories = ["science", "network-programming", "embedded"]

[workspace]
members = [
    "core/inference_engine",
    "core/distributed", 
    "core/neuromorphic",
    "edge_modules/raspberry_pi",
    "edge_modules/jetson"
]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking & Communication
tonic = "0.10"  # gRPC
prost = "0.12"  # Protocol Buffers
rumqttc = "0.24"  # MQTT client
hyper = "0.14"

# Machine Learning
candle-core = "0.4"  # Rust ML framework
ort = "1.16"  # ONNX Runtime bindings

# Monitoring & Metrics
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Hardware specific
rppal = { version = "0.14", optional = true }  # Raspberry Pi
jetson-inference = { version = "0.1", optional = true }  # NVIDIA Jetson

[dev-dependencies]
criterion = "0.5"  # Benchmarking
mockall = "0.12"  # Mocking
tokio-test = "0.4"

[features]
default = ["inference", "distributed"]
inference = []
distributed = []
neuromorphic = []
raspberry-pi = ["rppal"]
jetson = ["jetson-inference"]
gpu-acceleration = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[[bin]]
name = "neural-nexus-node"
path = "src/bin/node.rs"

[[bin]]
name = "neural-nexus-orchestrator"
path = "src/bin/orchestrator.rs"

[[bench]]
name = "inference_benchmark"
harness = false
